--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@
 
 nav {
     display: grid;
-    grid-template-rows: 3rem calc(100vh - 3rem);
     grid-template-columns: 1fr 1.75fr;
     position: fixed;
     top: 0;
@@ -34,7 +33,7 @@ nav {
 }
 
 .fileira1 {
-    grid-row: 1;
+    height: 3rem;
     grid-column: 1 / span 2;
     display: grid;
     background: var(--cor-um);
@@ -71,8 +70,12 @@ nav {
 }
 
 .nav__menu-lateral {
-    grid-row: 2;
-    grid-column: 2;
+    height: calc(100vh - 3rem);
+    width: 60vw;
+    position: fixed;
+    top: 3rem;
+    right: 0;
+    z-index: 999;
     padding: 1rem;
     background: var(--cor-um);
 }
