--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@
 }
 
 .artigos {
-    padding: 0.75rem;
+    padding: 0.5rem;
 }
 
 .artigo {
@@ -210,11 +210,15 @@ footer li {
     text-align: right;
 }
 
-.footer__logo {
+.footer__baixo {
     grid-row: 2;
     grid-column: 1 / span 2;
-    place-self: center;
-    margin-top: 1rem;
+    text-align: center;
+    line-height: 10px;
+    margin-top: 2rem;
+}
+
+.footer__logo {
     font-size: 1.8rem;
     font-weight: 700;
     color: var(--cor-dois);
