--- a/artigos.css
+++ b/artigos.css
@@ -1,3 +1,5 @@
+/* index.html */
+
 #artigo1 {
     background: url("https://images.unsplash.com/photo-1528543606781-2f6e6857f318?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1965&q=80");
     background-size: 170vw;
@@ -14,4 +16,12 @@
     background: url("https://images.unsplash.com/photo-1476231682828-37e571bc172f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1974&q=80");
     background-size: cover;
     background-position: center;
+}
+
+/* artigos */
+
+#apresentamos_o_health_plus {
+    background: url("https://images.unsplash.com/photo-1528543606781-2f6e6857f318?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1965&q=80");
+    background-size: 250vw;
+    background-position: center; 
 }
