--- a/index.css
+++ b/index.css
@@ -9,66 +9,59 @@
 }
 
 .banner {
-    width: 100vw;
     height: 80vh;
+    width: 100vw;
+
     background: url("https://images.unsplash.com/photo-1528543606781-2f6e6857f318?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1965&q=80");
     background-size: 220vw;
     background-position: center;
 }
 
-.banner p {
-    font-size: 3.8rem;
-    font-weight: 800;
-    color: var(--cor-tres);
-    text-align: center;
-    position: relative;
-}
-
-.banner__texto1 {
-    position: relative;
-    top: 10rem;
-}
-
-.banner__texto2 {
-    top: 18rem;   
-}
-
 .destaques h2 {
-    padding: 1rem;
-    font-size: 30px;
-    color: var(--cor-dois);
-    background: var(--cor-um);
     display: flex;
     flex-direction: column;
+
+    padding: 1rem;
+
+    background: var(--cor-um);
+    color: var(--cor-dois);
+    
+    font-size: 30px;
 }
 
 .destaques h2 span {
+    color: var(--cor-tres);
+
     font-size: 30px;
     font-weight: 800;
-    color: var(--cor-tres);
 }
 
 .cards {
-    padding: 1rem;
     display: flex;
     flex-direction: column;
+
+    padding: 1rem;
 }
 
 .card {
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    height: minmax(200px, 300px);
-    border-radius: 15px;
-    box-shadow: inset 0px 0px 35px 18px rgba(0,0,0,0.3);
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    border-radius: 15px;
+    min-height: 12rem;
+    width: 100%;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+
+    box-shadow: inset 0px 0px 35px 18px rgba(0,0,0,0.3);
 }
 
 .card__titulo {
-    font-size: 28px;
-    font-weight: 500;
     max-width: 13ch;
     margin-bottom: 2.3rem;
+
+    font-size: 28px;
+    font-weight: 500;
 }
 
 .card__titulo a {
@@ -76,30 +69,35 @@
 }
 
 .card__informacao p {
+    color: var(--cor-dois);
+
     font-size: 17px;
     font-weight: 300;
-    color: var(--cor-dois);
 }
 
 .subnav {
     padding: 1rem;
+
     background: var(--cor-um);
 }
 
 .subnav h2,
 .subnav__ativador {
-    font-size: 30px;
     color: var(--cor-dois);
+    
+    font-size: 30px;
 }
 
 .subnav__ativador {
     color: var(--cor-tres);
+    
     font-weight: 800;
 }
 
 .subnav__ativador span {
-    font-weight: 600;
     color: var(--cor-tres);
+
+    font-weight: 600;
     vertical-align: middle;
 }
 
@@ -109,12 +107,14 @@
 
 .subnav__dropdown li {
     padding: 0.75rem 0 0.75rem 0;
+
     font-size: 18px;
     font-weight: 400;
 }
 
 .subnav__dropdown a {
     padding: 0.25rem 0.25rem 0.25rem 0;
+    
     color: var(--cor-dois);
 }
 
@@ -171,60 +171,4 @@
 
 .artigo__conteudo p {
     margin-bottom: 1rem;
-}
-
-footer {
-    background: var(--cor-um);
-    display: grid;
-    column-gap: 3.5rem;
-    grid-template-columns: 1fr 1fr;
-    padding: 1rem;
-}
-
-footer h4,
-footer a {
-    color: var(--cor-dois);
-}
-
-footer h4 {
-    font-size: 23px;
-    font-weight: 500;
-}
-
-footer li {
-    font-size: 18px;
-    font-weight: 300;
-    margin-bottom: 1.5rem;
-}
-
-.footer__sobre {
-    grid-row: 1;
-    grid-column: 1;
-}
-
-.footer__redes-sociais {
-    grid-row: 1;
-    grid-column: 2;
-}
-
-.footer__redes-sociais {
-    text-align: right;
-}
-
-.footer__baixo {
-    grid-row: 2;
-    grid-column: 1 / span 2;
-    text-align: center;
-    line-height: 10px;
-    margin-top: 2rem;
-}
-
-.footer__logo {
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: var(--cor-dois);
-}
-
-.footer__logo span {
-    color: var(--cor-tres);
 }
