--- a/style.css
+++ b/style.css
@@ -24,18 +24,21 @@
 }
 
 nav {
-    display: grid;
-    grid-template-columns: 1fr 1.75fr;
     position: fixed;
     top: 0;
+    z-index: 999;
+
+    display: grid;
+    grid-template-columns: 1fr 1.75fr;
     width: 100%;
-    z-index: 9999;
 }
 
 .fileira1 {
-    height: 3rem;
     grid-column: 1 / span 2;
+
     display: grid;
+    height: 3rem;
+
     background: var(--cor-um);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 }
@@ -44,6 +47,7 @@ nav {
     grid-row: 1;
     grid-column: 1;
     place-self: center;
+
     font-size: 1.7rem;
 }
 
@@ -60,23 +64,28 @@ nav {
     grid-column: 1;
     place-self: end;
     align-self: center;
+
     margin-right: 0.75rem;
 }
 
 .nav__ativador {
     display: flex;
-    font-size: 2rem;
+
     color: var(--cor-dois);
+    
+    font-size: 2rem;
 }
 
 .nav__menu-lateral {
-    height: calc(100vh - 3rem);
-    width: 60vw;
     position: fixed;
     top: 3rem;
     right: 0;
     z-index: 999;
+
+    height: calc(100vh - 3rem);
+    width: 60vw;
     padding: 1rem;
+
     background: var(--cor-um);
 }
 
@@ -87,14 +96,17 @@ nav {
 
 .nav__menu-lateral h3 {
     margin: 1rem 0 1rem 0;
+
+    color: var(--cor-tres);
+
     font-size: 22px;
     font-weight: 300;
-    color: var(--cor-tres);
 }
 
 .nav__menu-lateral a {
     margin: 0.75rem 0 0.75rem 0;
     padding: 0.25rem 0 0.25rem 0.25rem;
+
     font-size: 18px;
     font-weight: 400;
 }
@@ -113,4 +125,70 @@ nav {
 
 .nav__menu-lateral--ativado {
     transform: translateX(0);
+}
+
+footer {
+    position: relative;
+    bottom: 0;
+
+    width: 100%;
+    display: grid;
+    column-gap: 3.5rem;
+    grid-template-columns: 1fr 1fr;
+
+    padding: 1rem;
+
+    background: var(--cor-um);
+}
+
+footer h4,
+footer a {
+    color: var(--cor-dois);
+}
+
+footer h4 {
+    font-size: 23px;
+    font-weight: 500;
+}
+
+footer li {
+    margin-bottom: 1.5rem;
+
+    font-size: 18px;
+    font-weight: 300;
+}
+
+.footer__sobre {
+    grid-row: 1;
+    grid-column: 1;
+}
+
+.footer__redes-sociais {
+    grid-row: 1;
+    grid-column: 2;
+}
+
+.footer__redes-sociais {
+    text-align: right;
+}
+
+.footer__baixo {
+    grid-row: 2;
+    grid-column: 1 / span 2;
+
+    margin-top: 2rem;
+
+    text-align: center;
+    line-height: 10px;
+}
+
+.footer__logo {
+    color: var(--cor-dois);
+    
+    font-size: 1.8rem;
+    font-weight: 700;
+}
+
+.footer__logo span {
+    color: var(--cor-tres);
 }
