--- a/artigo.css
+++ b/artigo.css
@@ -44,10 +44,6 @@
     font-weight: 300;
 }
 
-.artigo__texto {
-    margin-bottom: 6rem;
-}
-
 .artigo__texto p {
     margin-bottom: 1.5rem;
 
@@ -55,6 +51,13 @@
     font-weight: 400;
     line-height: 32px;
     max-width: 49ch;
+}
+
+hr {
+    margin-top: 7rem;
+    width: 100%;
+    height: 1.5px;
+    background-color: var(--cor-tres);
 }
 
 .caminhos {
