--- a/artigos.css
+++ b/artigos.css
@@ -7,7 +7,7 @@
 }
 
 #artigo2 {
-    background: url("https://images.unsplash.com/photo-1536939459926-301728717817?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2070&q=80");
+    background: url("https://images.unsplash.com/photo-1615809265660-21681e60e2bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=327&q=80");
     background-size: cover;
     background-position: center;
 }
