--- a/artigos.css
+++ b/artigos.css
@@ -18,6 +18,12 @@
     background-position: center;
 }
 
+#artigo4 {
+    background: url("https://images.unsplash.com/photo-1616494268339-f49a1c4ac8f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+    background-size: cover;
+    background-position: center;
+}
+
 /* artigos */
 
 #apresentamos_o_health_plus {
